@@ -37,21 +37,17 @@ public class ScriptProcessorTests extends ESTestCase {
     @Before
     public void setupScripting() {
         String scriptName = "script";
-        scriptService = new ScriptService(Settings.builder().build(),
+        scriptService = new ScriptService(
+            Settings.builder().build(),
             Collections.singletonMap(
-                Script.DEFAULT_SCRIPT_LANG, new MockScriptEngine(
-                    Script.DEFAULT_SCRIPT_LANG,
-                    Collections.singletonMap(
-                        scriptName, ctx -> {
-                            Integer bytesIn = (Integer) ctx.get("bytes_in");
-                            Integer bytesOut = (Integer) ctx.get("bytes_out");
-                            ctx.put("bytes_total", bytesIn + bytesOut);
-                            ctx.put("_dynamic_templates", Map.of("foo", "bar"));
-                            return null;
-                        }
-                    ),
-                    Collections.emptyMap()
-                )
+                Script.DEFAULT_SCRIPT_LANG,
+                new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> {
+                    Integer bytesIn = (Integer) ctx.get("bytes_in");
+                    Integer bytesOut = (Integer) ctx.get("bytes_out");
+                    ctx.put("bytes_total", bytesIn + bytesOut);
+                    ctx.put("_dynamic_templates", Map.of("foo", "bar"));
+                    return null;
+                }), Collections.emptyMap())
             ),
             new HashMap<>(ScriptModule.CORE_CONTEXTS)
         );
